--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@ body {
   margin: 0;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
 
 .dropdown-content {
   display: none;
@@ -86,8 +83,7 @@ body {
   </div> 
 </div>
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Hover over the "Dropdown" link to see the dropdown menu.</p>
+<h3>HotBeansWeb!</h3>
 
 </body>
 </html>
