--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Ubuntu;
 }
 
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: - #E11444;
 }
 
 .navbar a {
   float: left;
-  font-size: 16px;
+  font-size: 26px;
   color: white;
   text-align: center;
   padding: 14px 16px;
