--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 26px;  
   border: none;
   outline: none;
   color: white;
@@ -83,7 +83,7 @@ body {
   </div> 
 </div>
 
-<h1>HotBeansWeb!</h1>
+<h1 style="text-align:center">HotBeansWeb!</h1>
 
 </body>
 </html>
