--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
 }
 </style>
 </head>
-<body>
+<body style="background-color: #EF476F;">
 
 <div class="navbar">
   <a href="#home">Home</a>
