--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 .navbar a {
   float: left;
   font-size: 26px;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -32,10 +32,10 @@ body {
   font-size: 16px;  
   border: none;
   outline: none;
-  color: white;
+  color: black;
   padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
+  background-color: #E11444 ;
+  font-family: Ubuntu;
   margin: 0;
 }
 
@@ -43,7 +43,7 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #E11444 ;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
