--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
   position: absolute;
   background-color: #E11444 ;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: #E11444 ;
   z-index: 1;
 }
 
@@ -56,10 +56,6 @@ body {
   text-decoration: none;
   display: block;
   text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-content {
