--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@ body {
   </div> 
 </div>
 
-<h1 style="text-align:center">HotBeansWeb!</h1>
+<h1 style="text-align:center"><u>Welcome to Hot Beans Web:</u></h1>
+<p style="text-align:center">We make the worlds best websites. We make website for anyone. If you hire us. Then we can say that your website will be a 100 % successful.</p>
+
 
 </body>
 </html>
