--- a/WhereWeAre.html.html
+++ b/WhereWeAre.html.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'> 
-
 <style>
 body {
     font-family: 'Ubuntu';font-size: 22px;
@@ -25,7 +24,7 @@ body {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 27px;
 }
 
 /* Add an active class to highlight the current page */
@@ -47,7 +46,7 @@ body {
 
 /* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
-  font-size: 17px;
+  font-size: 27px;
   border: none;
   outline: none;
   color: white;
@@ -122,7 +121,7 @@ body {
   .topnav.responsive .dropdown-content {position: relative;}
   .topnav.responsive .dropdown .dropbtn {
     display: block;
-    width: 100%;
+    width: 160%;
     text-align: left;
   }
 } 
@@ -214,7 +213,7 @@ window.onclick = function(e) {
 <h1 style="text-align:center"><u><b>Where we are?</b></u></h1>
 <p style="text-align:center">We are located in Bath in England:</p>
 <p style="text-align:center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d79687.7744169619!2d-2.4345694024070625!3d51.380212719026225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487178a6743ee12d%3A0x138b27d0d66d9a09!2sBath!5e0!3m2!1sen!2suk!4v1647248692872!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe><p>
-<p style="text-align:center">Bath is a popular city in the UK and its also one of the most beautiful city in the UK. There are shops everywhere and there is restauntants that you can go to. There is also pubs. So if you want a drink then you can have a drink. But Bath is a cool place to go and work as its big and there is always things to do at Bath such as vising museum like the "Fashion Museum Bath". You will enjoy your stay in our city Bath.  </p>
+<p style="text-align:center">Bath is a popular city in the UK and its also one of the most beautiful city in the UK. There are shops everywhere and there is restauntants that you can go to. There is also pubs. So if you want a drink then you can have a drink. But Bath is a cool place to go and work as its big and there is always things to do at Bath such as visiting museum like the "Fashion Museum Bath". You will enjoy your stay in our city Bath.  </p>
 </body>
 
 
